# virtualization-rs

./: Cargo.toml  README.md
src/: base.rs
src/virtualization/: virtual_machine.rs
vz/: Cargo.toml
vz-sys/: Cargo.toml
vz-sys/src/: boot_loader.rs  foundation.rs  lib.rs  objc.rs  vm.rs
vz-sys/src/device/: entropy.rs  graphics.rs  keyboard.rs  memory.rs  mod.rs  network.rs  pointing.rs  serial_port.rs  socket.rs  storage.rs
vz-sys/src/virtualization/: serial_port.rs
